Add one shot upload capabilities to all key menus

--- a/index.html
+++ b/index.html
@@ -230,18 +230,18 @@
                       </div>
                     </div>
                   </div>
-                  <div class="upload-div block handlebar-oneShots">
-                    <form enctype="multipart/form-data" id="oneShot-uploader">
-                      <input id="oneShot" name="file" type="file" class="input-width"/>
-                      <!-- <div class="flex-center"> -->
-                        <label for="file" class="upload-label modal-input">Upload Sample</label>
-                      <!-- </div> -->
-                      <!-- <div class="flex-center"> -->
+                  <div class="oneShot-div block handlebar-oneShots">
+                    <form enctype="multipart/form-data" id="s-oneShot-uploader">
+                      <input id="s-oneShot" name="file" type="file" class="file-upload input-width"/>
+                      <div class="flex-center">
+                        <label for="s-oneShot" class="upload-label modal-input">Upload Sample</label>
+                      </div>
+                      <div class="flex-center">
                         <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
-                      <!-- </div> -->
-                      <!-- <div class="flex-center"> -->
+                      </div>
+                      <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
-                      <!-- </div> -->
+                      </div>
                     </form>
                   </div>
                 </div>
@@ -297,6 +297,20 @@
                       </div>
                     </div>
                   </div>
+                  <div class="oneShot-div block handlebar-oneShots">
+                    <form enctype="multipart/form-data" id="d-oneShot-uploader">
+                      <input id="d-oneShot" name="file" type="file" class="file-upload input-width"/>
+                      <div class="flex-center">
+                        <label for="d-oneShot" class="upload-label modal-input">Upload Sample</label>
+                      </div>
+                      <div class="flex-center">
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                      </div>
+                      <div class="flex-center">
+                        <input type="submit" class="submit-btn modal-input"/>
+                      </div>
+                    </form>
+                  </div>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
@@ -349,6 +363,20 @@
                                value="20000" min="0" max="20000" step="50">
                       </div>
                     </div>
+                  </div>
+                  <div class="oneShot-div block handlebar-oneShots">
+                    <form enctype="multipart/form-data" id="f-oneShot-uploader">
+                      <input id="f-oneShot" name="file" type="file" class="file-upload input-width"/>
+                      <div class="flex-center">
+                        <label for="f-oneShot" class="upload-label modal-input">Upload Sample</label>
+                      </div>
+                      <div class="flex-center">
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                      </div>
+                      <div class="flex-center">
+                        <input type="submit" class="submit-btn modal-input"/>
+                      </div>
+                    </form>
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -403,6 +431,20 @@
                       </div>
                     </div>
                   </div>
+                  <div class="oneShot-div block handlebar-oneShots">
+                    <form enctype="multipart/form-data" id="j-oneShot-uploader">
+                      <input id="j-oneShot" name="file" type="file" class="file-upload input-width"/>
+                      <div class="flex-center">
+                        <label for="j-oneShot" class="upload-label modal-input">Upload Sample</label>
+                      </div>
+                      <div class="flex-center">
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                      </div>
+                      <div class="flex-center">
+                        <input type="submit" class="submit-btn modal-input"/>
+                      </div>
+                    </form>
+                  </div>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
@@ -456,6 +498,20 @@
                       </div>
                     </div>
                   </div>
+                  <div class="oneShot-div block handlebar-oneShots">
+                    <form enctype="multipart/form-data" id="k-oneShot-uploader">
+                      <input id="k-oneShot" name="file" type="file" class="file-upload input-width"/>
+                      <div class="flex-center">
+                        <label for="k-oneShot" class="upload-label modal-input">Upload Sample</label>
+                      </div>
+                      <div class="flex-center">
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                      </div>
+                      <div class="flex-center">
+                        <input type="submit" class="submit-btn modal-input"/>
+                      </div>
+                    </form>
+                  </div>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
@@ -508,6 +564,20 @@
                                value="20000" min="0" max="20000" step="50">
                       </div>
                     </div>
+                  </div>
+                  <div class="oneShot-div block handlebar-oneShots">
+                    <form enctype="multipart/form-data" id="l-oneShot-uploader">
+                      <input id="l-oneShot" name="file" type="file" class="file-upload input-width"/>
+                      <div class="flex-center">
+                        <label for="l-oneShot" class="upload-label modal-input">Upload Sample</label>
+                      </div>
+                      <div class="flex-center">
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                      </div>
+                      <div class="flex-center">
+                        <input type="submit" class="submit-btn modal-input"/>
+                      </div>
+                    </form>
                   </div>
                 </div>
                 <div class="modal-footer">
