Fix radio button bug by making unique "name" attr

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
                     <div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">Low Pass</label>
-                        <input type="radio" class="s-filter-type" name="filter-type" value="lowpass" checked>
+                        <input type="radio" class="s-filter-type" name="s-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
-                        <label for="lowpass" class="filter-label">High Pass</label>
-                        <input type="radio" class="s-filter-type" name="filter-type" value="highpass">
+                        <label for="highpass" class="filter-label">High Pass</label>
+                        <input type="radio" class="s-filter-type" name="s-filter-type" value="highpass">
                       </div>
                       <div class="block range">
                         <label for="filter">Frequency</label>
@@ -284,11 +284,11 @@
                     <div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">Low Pass</label>
-                        <input type="radio" class="d-filter-type" name="filter-type" value="lowpass" checked>
+                        <input type="radio" class="d-filter-type" name="d-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">High Pass</label>
-                        <input type="radio" class="d-filter-type" name="filter-type" value="highpass">
+                        <input type="radio" class="d-filter-type" name="d-filter-type" value="highpass">
                       </div>
                       <div class="block range">
                         <label for="filter">Frequency</label>
@@ -351,11 +351,11 @@
                     <div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">Low Pass</label>
-                        <input type="radio" class="f-filter-type" name="filter-type" value="lowpass" checked>
+                        <input type="radio" class="f-filter-type" name="f-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">High Pass</label>
-                        <input type="radio" class="f-filter-type" name="filter-type" value="highpass">
+                        <input type="radio" class="f-filter-type" name="f-filter-type" value="highpass">
                       </div>
                       <div class="block range">
                         <label for="filter">Frequency</label>
@@ -418,11 +418,11 @@
                     <div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">Low Pass</label>
-                        <input type="radio" class="j-filter-type" name="filter-type" value="lowpass" checked>
+                        <input type="radio" class="j-filter-type" name="j-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">High Pass</label>
-                        <input type="radio" class="j-filter-type" name="filter-type" value="highpass">
+                        <input type="radio" class="j-filter-type" name="j-filter-type" value="highpass">
                       </div>
                       <div class="block range">
                         <label for="filter">Frequency</label>
@@ -485,11 +485,11 @@
                     <div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">Low Pass</label>
-                        <input type="radio" class="k-filter-type" name="filter-type" value="lowpass" checked>
+                        <input type="radio" class="k-filter-type" name="k-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">High Pass</label>
-                        <input type="radio" class="k-filter-type" name="filter-type" value="highpass">
+                        <input type="radio" class="k-filter-type" name="k-filter-type" value="highpass">
                       </div>
                       <div class="block range">
                         <label for="filter">Frequency</label>
@@ -552,11 +552,11 @@
                     <div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">Low Pass</label>
-                        <input type="radio" class="l-filter-type" name="filter-type" value="lowpass" checked>
+                        <input type="radio" class="l-filter-type" name="l-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
                         <label for="lowpass" class="filter-label">High Pass</label>
-                        <input type="radio" class="l-filter-type" name="filter-type" value="highpass">
+                        <input type="radio" class="l-filter-type" name="l-filter-type" value="highpass">
                       </div>
                       <div class="block range">
                         <label for="filter">Frequency</label>
