Make default for oneShot select

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>SampleJam</title>
+      <title>qwerty gurdy</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -16,7 +16,7 @@
       <!-- <div> -->
         <nav class="navbar">
           <div class="nav-content">
-            <h1 class="nav-title">Sample Jam</h1>
+            <h1 class="nav-title">qwerty gurdy</h1>
           </div>
         </nav>
         <div class="nav-left">
