Add default selection for custom oneShots

--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
                 <div class="modal-body">
                   <div id="s-handlebar-oneShots" class="handlebar-oneShots block center-div">
                   </div>
-
                   <div class="block range">
                     <label for="volume">Volume</label>
                     <input class="custom-range" type="range" id="s-volume" name="s-volume"
@@ -220,7 +219,7 @@
                         <input type="radio" class="s-filter-type" name="s-filter-type" value="lowpass" checked>
                       </div>
                       <div class="radio">
-                        <label for="highpass" class="filter-label">High Pass</label>
+                        <label for="lowpass" class="filter-label">High Pass</label>
                         <input type="radio" class="s-filter-type" name="s-filter-type" value="highpass">
                       </div>
                       <div class="block range">
