--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -314,6 +319,11 @@
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
                 </div>
               </div>
             </div>
@@ -382,6 +392,11 @@
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -448,6 +463,11 @@
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
                 </div>
               </div>
             </div>
@@ -516,6 +536,11 @@
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -582,6 +607,11 @@
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
                 </div>
               </div>
             </div>
