Mobile modal triggered if user device is mobile

--- a/index.html
+++ b/index.html
@@ -641,6 +641,31 @@
               </div>
             </div>
           </div>
+
+          <div class="modal fade" id="mobile-modal" tabindex="-1" role="dialog" aria-labelledby="mobileModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="mobile-modal-content modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="sModalLabel">Warning!</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Qwerty Gurdy is intended to be used on a computer. Some features may not work on mobile devices.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
+                  <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
       <!-- </div> -->
     </body>
