--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
               </div>
             </div>
           </div>
-
+          <!-- Message to mobile users -->
           <div class="modal fade" id="mobile-modal" tabindex="-1" role="dialog" aria-labelledby="mobileModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="mobile-modal-content modal-content">
@@ -653,6 +653,33 @@
                 </div>
                 <div class="modal-body">
                   <p>Qwerty Gurdy is intended to be used on a computer. Some features may not work on mobile devices.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
+                  <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+                <div class="modal-loader">
+                  <div class="outer"></div>
+                  <div class="middle"></div>
+                  <div class="inner"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Failure message -->
+          <div class="modal fade" id="failure-modal" tabindex="-1" role="dialog" aria-labelledby="mobileModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="mobile-modal-content modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title center-text" id="sModalLabel">Warning!</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <h5 class="center-text">Failed to pload your sample</h5>
+                  <hr>
+                    <p class="center-text">Make sure it's an audio file and don't forget to give it a title</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
